# meli-vehicle-monitor

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-monitor.yml
src/ml_vehicle_monitor/: __init__.py  config.py  ml_api.py  monitor.py  reporting.py  storage.py
